--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mysql2": "^3.14.0"
+    "mysql2": "^3.14.0",
+    "velocityjs": "^2.0.6"
   }
 }
