--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "js-yaml": "^4.1.0",
     "mysql2": "^3.14.0",
     "velocityjs": "^2.0.6"
   }
